# langelic-epub

./: .credo.exs  .gitignore  2026-04-19-langelic-epub-implementation-plan.md  CHANGELOG.md  LICENSE  NOTICE  PORTING.md  README.md  UPDATE_PROCEDURE.md  checksum-Elixir.LangelicEpub.Native.exs  justfile  mix.exs
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: 2026-04-24-namespaced-opf-spine-bug.md  2026-04-25-cover-id-href-resolution.md  2026-04-26-mimetype-trailing-whitespace.md
lib/: langelic_epub.ex
lib/langelic_epub/: asset.ex  chapter.ex  document.ex  error.ex  native.ex  nav_item.ex
native/langelic_epub/: Cargo.toml
native/langelic_epub/.cargo/: config.toml
native/langelic_epub/src/: error.rs  lib.rs  opf.rs  reader.rs  toc.rs  types.rs  writer.rs
scripts/: release.exs
test/: build_test.exs  epubcheck_test.exs  langelic_epub_test.exs  lenient_mimetype_test.exs  page_progression_direction_test.exs  rendition_layout_test.exs  round_trip_test.exs
test/support/: epub_fixture_builder.ex  fixtures.ex
test/support/fixtures/: README.md
