[package]
name = "langelic_epub"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rustler NIF for EPUB read/write"

[lib]
crate-type = ["cdylib"]

# rustler_precompiled 0.9 + rustler 0.37 require the crate to expose NIF
# version features so the release action can pick a target ABI at build time
# via `--features nif_version_2_XX`. See:
# https://hexdocs.pm/rustler_precompiled/precompilation_guide.html
[features]
default = ["nif_version_2_15"]
nif_version_2_14 = ["rustler/nif_version_2_14"]
nif_version_2_15 = ["rustler/nif_version_2_15"]
nif_version_2_16 = ["rustler/nif_version_2_16"]
nif_version_2_17 = ["rustler/nif_version_2_17"]

[dependencies]
rustler = "0.37"
epub-builder = "0.8.3"
quick-xml = "0.39"
zip = "8"
thiserror = "2"
uuid = { version = "1", features = ["v4", "v5"] }

[profile.release]
strip = true
lto = "thin"
opt-level = 3
